<resources>
    <string name="app_name">Gajian</string>
    <string name="tambah_pegawai">Tambah Pegawai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="absensi">Absensi</string>
    <string name="gaji">Gaji</string>
    <string name="akun">Akun</string>
    <string name="hadir">Hadir</string>
    <string name="absen">Absen</string>
    <string name="_0">0</string>
    <string name="terlambat">Terlambat</string>
    <string name="lembur">Lembur</string>
    <string name="libur">Libur</string>
    <string name="add_employee">Tambah Pegawai</string>
    <string name="employee_information">Info Pegawai</string>
    <string name="add_from_contact">Tambah dari Kontak</string>
    <string name="employee_name">Nama Pegawai</string>
    <string name="employee_type">Tipe Pegawai</string>
    <string name="salary">Gaji</string>
    <string name="working_hours">Jam Kerja</string>
</resources>