<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:orientation="vertical"
    tools:context=".ui.employee.AddEmployeeActivity">

    <LinearLayout
        android:id="@+id/layout_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/add_employee"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout_add_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_action_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/employee_information"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/add_from_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/add_from_contact"
                android:textColor="@color/primary"
                app:drawableStartCompat="@drawable/ic_contact"
                app:drawableTint="@color/primary" />

            <EditText
                android:id="@+id/et_employee_name"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_stroke_primary_text"
                android:focusable="true"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/employee_name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:textColor="@color/primary_text"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_stroke_primary_text"
                android:focusable="true"
                android:fontFamily="@font/poppins_medium"
                android:hint="Nomor Telepon"
                android:inputType="number"
                android:maxLength="12"
                android:paddingHorizontal="16dp"
                android:textColor="@color/primary_text"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/employee_type"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_stroke_primary_text"
                    android:paddingVertical="4dp"
                    android:paddingStart="16dp">

                    <TextView
                        android:id="@+id/txt_monthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Bulanan"
                        android:textColor="@color/primary_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_monthly_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Penuh waktu, digaji perbulan "
                        android:textColor="@color/secondary_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_monthly" />

                    <RadioButton
                        android:id="@+id/rb_monthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_stroke_primary_text"
                    android:paddingVertical="4dp"
                    android:paddingStart="16dp">

                    <TextView
                        android:id="@+id/txt_daily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Harian"
                        android:textColor="@color/primary_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_daily_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Digaji sesuai jumlah hari kerja"
                        android:textColor="@color/secondary_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_daily" />

                    <RadioButton
                        android:id="@+id/rb_daily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_stroke_primary_text"
                    android:paddingVertical="4dp"
                    android:paddingStart="16dp">

                    <TextView
                        android:id="@+id/txt_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Per Jam"
                        android:textColor="@color/primary_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_hour_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Digaji sesuai jumlah jam kerja, per jam"
                        android:textColor="@color/secondary_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_hour" />

                    <RadioButton
                        android:id="@+id/rb_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/salary"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_salary"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_stroke_primary_text"
                android:focusable="true"
                android:fontFamily="@font/poppins_medium"
                android:hint="contoh : Rp. 500.000"
                android:inputType="number"
                android:paddingHorizontal="16dp"
                android:textColor="@color/primary_text"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/working_hours"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_start_time"
                    android:layout_width="120dp"
                    android:layout_height="54dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/bg_stroke_primary_text"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="00.00"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="-"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_end_time"
                    android:layout_width="120dp"
                    android:layout_height="54dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/bg_stroke_primary_text"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="00.00"
                    android:textColor="@color/secondary_text" />
            </LinearLayout>

            <Button
                android:id="@+id/btnAddEmployee"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_add_employee"
                android:layout_gravity="bottom"
                android:layout_margin="16dp"
                android:background="@drawable/bg_button_blue"
                android:fontFamily="@font/poppins_bold"
                android:text="Konfirmasi"
                android:textAllCaps="false"
                tools:ignore="NotSibling" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>